--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -9,3 +9,6 @@
       username: postgres
       password: root
       driver-class-name: org.postgresql.Driver
+    jpa:
+      hibernate:
+        ddl-auto: update
